--- a/development/Containerfile
+++ b/development/Containerfile
@@ -3,19 +3,9 @@
 #source Fedora Docs:https://docs.fedoraproject.org/en-US/iot/build-docker/
 
 FROM alpine:latest AS builder
-RUN apk --no-cache add ca-certificates
-WORKDIR /data.txt/
+COPY data.txt ./
 
-FROM builder AS stage1
-COPY builder.go ./
-
-FROM fedora:latest as FINAL >> Dockerfile
-COPY builder from data.txt /tmp/
-RUN  /tmp/data.txt/* 
-
-
-podman build -t storage-exercise .
-
-
-podman images
+FROM fedora AS final
+WORKDIR /var/www/html/
+COPY  --from=builder ./data.txt ./data.txt
 
