--- a/development/Containerfile
+++ b/development/Containerfile
@@ -1,11 +1,6 @@
-#source reference Docker Docs: https://docs.docker.com/build/building/multi-stage/
-&&
-#source Fedora Docs:https://docs.fedoraproject.org/en-US/iot/build-docker/
-
 FROM alpine:latest AS builder
-COPY data.txt ./
+COPY data.txt /
 
 FROM fedora AS final
-WORKDIR /var/www/html/
-COPY  --from=builder ./data.txt ./data.txt
+COPY  --from=builder ./data.txt ./
 
